# Quadcopter_Stereo_Camera_Formation_Control

./: .~lock.q1_form_ctrl_results (copy).csv#  Account Summary by Term.html  README.md  multiquad_sim_PID.py  multiquad_sim_SFB.py  multiquad_sim_bangbang.py  multiquad_sim_large_window_mpc.py  multiquad_sim_medium_window_mpc.py  multiquad_sim_small_window_mpc.py
Account Summary by Term_files/: web_defaultapp.css
GazeboSimulation/: CMakeLists.txt  package.xml
GazeboSimulation/config/: uav1_control.yaml
GazeboSimulation/launch/: BANG_Controller.launch  MPC_Large_Window_Controller.launch  MPC_Medium_Window_Controller.launch  MPC_Small_Window_Controller.launch  PID_Controller.launch  SFB_Controller.launch  spawn_3_mavs_pid.launch  spawn_quadrotor.launch  spawn_quadrotor_with_downward_stereo_cam.launch
GazeboSimulation/src/: master.py  plot_simulation.py  slave_BANG.py  slave_LargeWindowMPC.py  slave_MediumWindowMPC.py  slave_PID.py  slave_SFB.py  slave_SmallWindowMPC.py
GazeboSimulation/urdf/: generic_stereo_camera.urdf.xacro  generic_stereo_camera2.urdf.xacro  gimbal_stereo_camera.urdf.xacro  green_cylinder.urdf  purple_cylinder.urdf  quad.urdf  quadrotor.gv  quadrotor_downward_stereo_cam.gazebo.xacro  quadrotor_downward_stereo_cam.urdf.xacro  quadrotor_downward_stereo_cam2.gazebo.xacro  quadrotor_downward_stereo_cam2.urdf.xacro
GazeboSimulation/worlds/: boat_world.world  boat_world.world~
GazeboSimulation/xacro/p3dx/: boat.xacro  boat_body.xacro  boat_chassis.xacro  boat_chassis.xacro~
Linear/: uav_model_bang.py  uav_model_large_window_mpc.py  uav_model_medium_window_mpc.py  uav_model_pid.py  uav_model_sfb.py  uav_model_small_window_mpc.py
Nonlinear/: multiquad_sim_PID.py  multiquad_sim_SFB.py  multiquad_sim_bangbang.py  multiquad_sim_large_window_mpc.py  multiquad_sim_medium_window_mpc.py  multiquad_sim_mpc.py  multiquad_sim_small_window_mpc.py
results/: plot.py  plot_3d.py  plot_3d_gazebo.py  plot_gazebo.py
results/Linear/circle/Bang/: results.csv
results/Linear/circle/MPC/: large_results.csv  medium_results.csv  small_results.csv
results/Linear/circle/PID/: results.csv
results/MPC/: large_window_results.csv  results.csv  small_window_results.csv
results/PID/: results.csv
(+40 files in other folders)
